# raylib_game_of_life

./: .clangd  CMakeLists.txt  README  README.md  main.cpp
.cache/clangd/index/: main.cpp.DABD974F33ADF40D.idx
